[project]
name = "imgurbc"
version = "0.1.0"
description = ""
authors = [
    {name = "Enzo Santos",email = "enzo.santos29@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "aiopath (>=0.7.7,<0.8.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "google-cloud-storage (>=3.10.1,<4.0.0)",
    "fastapi[standard] (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "aiosmtplib (>=5.1.0,<6.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
]

[tool.poetry]
packages = [{include = "imgurbc", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^26.3.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
